updated the title and messed with the styling

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Dimension by HTML5 UP</title>
+		<title>Portfolio - Ryan McInnis</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -53,15 +53,15 @@
 							<article id="work">
 								<h2 class="major">Work</h2>
                                 <span class="image main"><img src="images/pic02.jpg" alt="code" /></span>
-								<p>Check out the last project I worked on!</p>
-								<p><a href="https://www.gametableadventures.com">gametableadventures.com</a></p>
+								<p>Check out the last project I worked on!<br><a href="https://www.gametableadventures.com">gametableadventures.com</a></p>
+								<p>Or check out my <a href="https://github.com/ryan4242">Github</a></p>
 							</article>
 
 						<!-- About -->
 							<article id="about">
 								<h2 class="major">About</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<p>This is the about me section!</p>
+								<p>This is the about me section! Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit atque doloribus adipisci quia eum distinctio. Veniam dolorem quia saepe explicabo voluptatum autem corporis earum, nesciunt, eligendi nihil tempore sint tempora?</p>
 							</article>
 
 						<!-- Contact -->
